--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           <li><a href="#award" class="nav-link scrollto"><i class="bx bi-award"></i> <span>Award</span></a></li>
           <li><a href="#activity" class="nav-link scrollto"><i class="bx bi-newspaper"></i> <span>Activity</span></a>
           </li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -794,7 +795,8 @@
                 </li>
 
                 <li>
-                  <b>HKSTP Human-robot basketball competition - HKCLR Consultant for team CUHK</b> <b class="float-end date">
+                  <b>HKSTP Human-robot basketball competition - HKCLR Consultant for team CUHK</b> <b
+                    class="float-end date">
                     2021
                   </b>
                   <br>
@@ -818,7 +820,8 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Innovation and Technology Student Club (ITSC) AI STEM Workshop Tutor</b> <b class="float-end date"> 2020
+                  <b>Innovation and Technology Student Club (ITSC) AI STEM Workshop Tutor</b> <b class="float-end date">
+                    2020
                   </b>
                 </li>
                 <li>
@@ -855,7 +858,8 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Carmel Secondary School 50th Anniversary Open Day - Game Booth Organizer</b> <b class="float-end date">
+                  <b>Carmel Secondary School 50th Anniversary Open Day - Game Booth Organizer</b> <b
+                    class="float-end date">
                     2014
                   </b>
                   <ul>
@@ -865,11 +869,13 @@
                   </ul>
                 </li>
                 <li>
-                  <b>WoFoo Millennium Entrepreneurship Program - Turning 5R into Business</b> <b class="float-end date"> 2014
+                  <b>WoFoo Millennium Entrepreneurship Program - Turning 5R into Business</b> <b class="float-end date">
+                    2014
                   </b>
                 </li>
                 <li>
-                  <b>World Robot Olympiad of Hong Kong Regional Selection Participant</b> <b class="float-end date"> 2013
+                  <b>World Robot Olympiad of Hong Kong Regional Selection Participant</b> <b class="float-end date">
+                    2013
                   </b>
                   <ul>
                     <li>
@@ -904,7 +910,8 @@
                   </b>
                 </li>
                 <li>
-                  <b>World Robot Olympiad of Hong Kong Regional Selection Participant </b><b class="float-end date"> 2012
+                  <b>World Robot Olympiad of Hong Kong Regional Selection Participant </b><b class="float-end date">
+                    2012
                   </b>
                   <ul>
                     <li>
@@ -982,7 +989,54 @@
         </div>
       </div>
     </section> -->
-
+    <section id="contact" class="contact">
+      <div class="container">
+        <div class="section-title">
+          <h2>Contact</h2>
+          <p>You can drop me an message for any kinds of opportunities not limited to work, cooperation, idea exchange, and so on or any
+            queries.</p>
+        </div>
+        <div class="row aos-init aos-animate" data-aos="fade-in">
+          <div class="col-lg-5 d-flex align-items-stretch">
+            <div class="info">
+              <div class="address"> <i class="bi bi-geo-alt"></i>
+                <h4>Location:</h4>
+                <p>Please reach me through email due to privacy concern</p>
+              </div>
+              <div class="email"> <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p>jeff214113@gmail.com</p>
+              </div>
+              <div class="phone"> <i class="bi bi-phone"></i>
+                <h4>Call:</h4>
+                <p>Please reach me through email due to privacy concern</p>
+              </div> <iframe src="https://maps.google.com/maps?q=Hong%20Kong&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen=""></iframe>
+            </div>
+          </div>
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <div class="row">
+                <div class="form-group col-md-6"> <label for="name">Your Name</label> <input type="text" name="name"
+                    class="form-control" id="name" required=""></div>
+                <div class="form-group col-md-6"> <label for="name">Your Email</label> <input type="email"
+                    class="form-control" name="email" id="email" required=""></div>
+              </div>
+              <div class="form-group"> <label for="name">Subject</label> <input type="text" class="form-control"
+                  name="subject" id="subject" required=""></div>
+              <div class="form-group"> <label for="name">Message</label><textarea class="form-control" name="message"
+                  rows="10" required=""></textarea></div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">Your message has been sent. Thank you!</div>
+              </div>
+              <div class="text-center"><button type="submit">Send Message</button></div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
