--- a/index.html
+++ b/index.html
@@ -993,12 +993,13 @@
       <div class="container">
         <div class="section-title">
           <h2>Contact</h2>
-          <p>You can drop me an email for any kinds of opportunities not limited to work, cooperation, idea exchange, and so on or any
+          <p>You can drop me an email for any kinds of opportunities not limited to work, cooperation, idea exchange,
+            and so on or any
             queries.</p>
         </div>
-        <div class="row aos-init aos-animate" data-aos="fade-in">
-          <div class="d-flex align-items-stretch">
-            <div class="info">
+        <div class="info">
+          <div class="row aos-init aos-animate" data-aos="fade-in">
+            <div class="col-lg-7 align-items-stretch">
               <div class="address"> <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
                 <p>Please reach me through email due to privacy concern</p>
@@ -1010,8 +1011,11 @@
               <div class="phone"> <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
                 <p>Please reach me through email due to privacy concern</p>
-              </div> <iframe src="https://maps.google.com/maps?q=Hong%20Kong&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen=""></iframe>
+              </div>
+            </div>
+            <div class="col-lg-5 align-items-stretch"> <iframe
+                src="https://maps.google.com/maps?q=Hong%20Kong&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                style="border:0; width: 100%; height: 290px;" allowfullscreen=""></iframe>
             </div>
           </div>
         </div>
