HIdden Text update

--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
           <h2>Dream Workplace</h2>
         </div>
         <p>
-          In this section, I will list my top 3 company that I would like to work in. The dream to be an influential programmer as mentioned in about section is to contribute to great company and postively affect the world is always my goal of my whole life.
+          In this section, I will list the top 3 companies that I would like to work in. Being an influential programmer, contributing to great companies and positively affecting the world, is always my aspiration. 
         </p>
 
         <div class="carousel-inner py-4">
@@ -952,7 +952,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Google</h5>
                       <p align="justify" class="card-text">
-                        My life cannot live without Google, and Google products are great, such as gmail, google meet, and even the camera of pixel.  I hope I can work in Google, especially in the office that located in CA, US headquarter.
+                        Google is essential to our daily lives, in which utilizing many of their significant products, such as Gmail, Google Meet, Pixel Camera has become a habit. Working at the US headquarters of Google has always been my wish. 
                       </p>
                     </div>
                   </div>
@@ -965,7 +965,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Apple</h5>
                       <p align="justify" class="card-text">
-                        Apple has changed the world of mobile device, which is a match with my dream.  Apple products always well engineered, and the values that apple holds is also my values.  I hope I can work in Apple, especially in the office that located in CA, US headquarter.
+                        Being the pioneer of mobile devices, Apple has a worldwide impact on how people use technology.  My core value is in sync with theirs, which is to protect one’s privacy. I hope I could work at Apple, whose products are well-engineered, especially in the US headquarters. 
                       </p>
                     </div>
                   </div>
@@ -978,7 +978,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Robotics Company in Japan</h5>
                       <p align="justify" class="card-text">
-                        Inspired by Gundam, the engineering in train system, and the exchange in ABU Robocon 2019, I appreciate how Japan treat robotics and engineering.  Their attitude, their approach are excellent.  I hope I can make robotics into trend, and more daily related with their spirit and values.
+                        Impressed by Gundam and Japan’s railway system, and also through the exchange in ABU Robocon 2019, I appreciate how Japan treats engineering and robotics, in which they work diligently and meticulously. I hope I can set new trends in robotics while upholding their virtues.
                       </p>
                     </div>
                   </div>
