--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master (In Progress)</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>jeff214113@gmail.com</span></li>
                 </ul>
@@ -163,7 +163,7 @@
               <a href="https://seng.hkust.edu.hk/academics/taught-postgraduate/msc-bdt">
                 <h4>Master of Science in Big Data Technology</h4>
               </a>
-              <h5>2021 - 2022 (Present)</h5>
+              <h5>2021 - 2022</h5>
               <p><em>The Hong Kong University of Science and Technology (HKUST)</em>
               </p>
               <p><a data-bs-toggle="collapse" href="#collapseUSTCourse" role="button" aria-expanded="false"
@@ -930,7 +930,7 @@
 
       </div>
     </section>
-    <!-- <section id="dream" class="dream">
+    <section id="dream" class="dream">
       <div class="container">
         <div class="section-title">
           <h2>Dream Workplace</h2>
@@ -952,7 +952,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Google</h5>
                       <p align="justify" class="card-text">
-                        Google is essential to our daily lives, in which utilizing many of their significant products, such as Gmail, Google Meet, Pixel Camera has become a habit. Working at the US headquarters of Google has always been my wish. 
+                        Google is essential to our daily lives, in which utilizing many of their significant products, such as Gmail, Google Meet, Google Cloud Platform has become a habit. Working at the US headquarters of Google has always been my wish. 
                       </p>
                     </div>
                   </div>
@@ -988,8 +988,8 @@
           </div>
         </div>
       </div>
-    </section> -->
-    <section id="contact" class="contact">
+    </section>
+    <section id="contact" class="contact section-bg">
       <div class="container">
         <div class="section-title">
           <h2>Contact</h2>
