--- a/index.html
+++ b/index.html
@@ -936,56 +936,56 @@
           <h2>Dream Workplace</h2>
         </div>
         <p>
-          In this section, I will list the top 3 companies that I would like to work in. Being an influential programmer, contributing to great companies and positively affecting the world, is always my aspiration. 
+          In this section, I will list the top 3 companies that I would like to work in. Being an influential
+          programmer, contributing to great companies and positively affecting the world, is always my aspiration.
         </p>
 
-        <div class="carousel-inner py-4">
 
-          <div class="carousel-item active">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-4" data-aos="zoom-out-up">
-                  <div class="card">
-                    <img
-                      src="https://thumbs.dreamstime.com/b/google-headquarters-buildings-logo-mountain-vew-california-usa-aug-multinational-corporation-specializing-internet-183056909.jpg"
-                      class="card-img-top" alt="Waterfall" />
-                    <div class="card-body">
-                      <h5 class="card-title">Google</h5>
-                      <p align="justify" class="card-text">
-                        Google is essential to our daily lives, in which utilizing many of their significant products, such as Gmail, Google Meet, Google Cloud Platform has become a habit. Working at the US headquarters of Google has always been my wish. 
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 d-none d-lg-block" data-aos="zoom-in-up">
-                  <div class="card">
-                    <img src="https://i.ytimg.com/vi/FzcfZyEhOoI/maxresdefault.jpg" class="card-img-top"
-                      alt="Sunset Over the Sea" />
-                    <div class="card-body">
-                      <h5 class="card-title">Apple</h5>
-                      <p align="justify" class="card-text">
-                        Being the pioneer of mobile devices, Apple has a worldwide impact on how people use technology.  My core value is in sync with theirs, which is to protect one’s privacy. I hope I could work at Apple, whose products are well-engineered, especially in the US headquarters. 
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 d-none d-lg-block" data-aos="zoom-out-up">
-                  <div class="card">
-                    <img src="https://iv1.lisimg.com/image/11489391/640full.jpg" class="card-img-top"
-                      alt="Sunset over the Sea" />
-                    <div class="card-body">
-                      <h5 class="card-title">Robotics Company in Japan</h5>
-                      <p align="justify" class="card-text">
-                        Impressed by Gundam and Japan’s railway system, and also through the exchange in ABU Robocon 2019, I appreciate how Japan treats engineering and robotics, in which they work diligently and meticulously. I hope I can set new trends in robotics while upholding their virtues.
-                      </p>
-                    </div>
-                  </div>
-                </div>
+        <div class="row">
+          <div class="col-lg-4" data-aos="zoom-out-up">
+            <div class="card">
+              <img
+                src="https://thumbs.dreamstime.com/b/google-headquarters-buildings-logo-mountain-vew-california-usa-aug-multinational-corporation-specializing-internet-183056909.jpg"
+                class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Google</h5>
+                <p align="justify" class="card-text">
+                  Google is essential to our daily lives, in which utilizing many of their significant products, such as
+                  Gmail, Google Meet, Google Cloud Platform has become a habit. Working at the US headquarters of Google
+                  has always been my wish.
+                </p>
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4" data-aos="zoom-in-up">
+            <div class="card">
+              <img src="https://i.ytimg.com/vi/FzcfZyEhOoI/maxresdefault.jpg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Apple</h5>
+                <p align="justify" class="card-text">
+                  Being the pioneer of mobile devices, Apple has a worldwide impact on how people use technology. My
+                  core value is in sync with theirs, which is to protect one’s privacy. I hope I could work at Apple,
+                  whose products are well-engineered, especially in the US headquarters.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4" data-aos="zoom-out-up">
+            <div class="card">
+              <img src="https://iv1.lisimg.com/image/11489391/640full.jpg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Robotics Company in Japan</h5>
+                <p align="justify" class="card-text">
+                  Impressed by Gundam and Japan’s railway system, and also through the exchange in ABU Robocon 2019, I
+                  appreciate how Japan treats engineering and robotics, in which they work diligently and meticulously.
+                  I hope I can set new trends in robotics while upholding their virtues.
+                </p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
