added work profile

--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
                 <li>Designed the software system for controlling robot for both front-end and back-end.</li>
                 <li>Developed an mobile application using Flutter for displaying robot location on map.</li>
                 <li>Developed cloud service for communicating between mobile application and robot</li>
+                <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot project</a></li>
               </ul>
             </div>
             <div class="resume-item">
