--- a/index.html
+++ b/index.html
@@ -506,14 +506,23 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Working Experience</h3>
             <div class="resume-item">
+              <h4>Software Engineer</h4>
+              <h5>Jul 2022 - Present</h5>
+              <p><em><a href="https://flyfarm.com/" target="_blank">Fly Farm</a>, Hong
+                  Kong</em></p>
+              <ul>
+                <li>To be update</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Assistant Engineer</h4>
-              <h5>Aug 2020 - Present</h5>
+              <h5>Aug 2020 - Jul 2022</h5>
               <p><em><a href="http://www.hkclr.hk/#" target="_blank">Hong Kong Center For Logistic Robotics</a>, Hong
                   Kong</em></p>
               <ul>
-                <li>Designed the software system for controlling robot for both front-end and back-end.</li>
-                <li>Developed an mobile application using Flutter for displaying robot location on map.</li>
-                <li>Developed cloud service for communicating between mobile application and robot</li>
+                <li>Responsible for InnoHK pioneering research clusters robotics project.</li>
+                <li>Developed unmannered robot interaction system with human.</li>
+                <li>Developed front-end not limited to mobile and web application and back-end service service with gRPC API hosting on AWS and Alicloud.</li>
                 <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot project</a></li>
               </ul>
             </div>
@@ -524,8 +533,8 @@
                     Technology (HSEO)</a>,
                   Hong Kong</em></p>
               <ul>
-                <li>Constructed a web-base database for the department staff record different data.</li>
-                <li>Designed an online user-interface which convenience the process in data input and secure the data
+                <li>Constructed a SQL database for the department staff recording different data.</li>
+                <li>Designed an web-interface using PHP that convenience the process in data input and secure the data
                   retrieval.</li>
               </ul>
             </div>
