Update work experience

--- a/index.html
+++ b/index.html
@@ -511,7 +511,9 @@
               <p><em><a href="https://flyfarm.com/" target="_blank">Fly Farm</a>, Hong
                   Kong</em></p>
               <ul>
-                <li>To be update</li>
+                <li>Developing a remote monitoring system for the IoT agri-tech company, using Restful API and Mongodb.</li>
+                <li>Developing a real-time machinery and robotics control system using MQTT and Flutter.</li>
+                <li>Performing the potential needs for data analysis with Big Data Technology, not limited to AI, Data Lake.</li>
               </ul>
             </div>
             <div class="resume-item">
