--- a/index.html
+++ b/index.html
@@ -758,6 +758,17 @@
             <div>
               <ul class="timeline">
                 <li>
+                  <b>CUHK Robocon Team - Observer</b>
+                  <b class="float-end date"> 2022
+                  </b>
+                </b><br>
+                <em>Related news</em>
+                <ul>
+                  <li><a href="https://www.youtube.com/watch?v=GEz8ktGMHKE&t=35467s&ab_channel=ROBOCONOfficial%5Brobotcontest%5D" target="_blank">ABU Robocon 2022 Live</a>
+                  </li>
+                </ul>
+                </li>
+                <li>
                   <b>VEX IQ held by CUHK - Judge</b>
                   <b class="float-end date"> 2022
                   </b>
