Academic Information Update

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
           <h2>About</h2>
           <p>Hello World! I am jeff, who have a dream to be a great programmer. Most of my coding projects is placed
             in gitlab. I am still working on this webpage, so
-            some of the information may not be accurate. The template is retrieved from <a
-              href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>. </p>
+            some of the information may be missing. The template is retrieved from <a href="https://bootstrapmade.com/"
+              target="_blank">BootstrapMade</a>. </p>
         </div>
 
         <div class="row">
@@ -137,7 +137,8 @@
               particularly in computer vision, big data and embedded software. Skilled in C/C++/Python.
             </p>
             <p>
-              Apart from working in Hong Kong, I am also open to opportunities from overseas, especially Japan, Canada
+              Apart from Hong Kong, I also open to opportunities not limited to work or PhD opportunities
+              from overseas, especially Japan, Canada
               and US.
             </p>
           </div>
@@ -188,7 +189,8 @@
                         MSBD5002
                       </td>
                       <td>
-                        Data Mining and Knowledge Discovery
+                        Data Mining and Knowledge Discovery (#)
+                        <br> <a href="assets/file/HKUST/MSBD5002_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -196,7 +198,8 @@
                         MSBD5003
                       </td>
                       <td>
-                        Big Data Computing
+                        Big Data Computing (#)
+                        <br> <a href="assets/file/HKUST/MSBD5003_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -213,6 +216,7 @@
                       </td>
                       <td>
                         Machine Learning
+                        <br> <a href="assets/file/HKUST/MSBD5012_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -228,7 +232,8 @@
                         MSBD5016
                       </td>
                       <td>
-                        Deep Learning Meets Computer Vision: Practice and Applications
+                        Deep Learning Meets Computer Vision: Practice and Applications (#)
+                        <br> <a href="assets/file/HKUST/MSBD5016_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -237,6 +242,7 @@
                       </td>
                       <td>
                         Introduction to Blockchain Technology
+                        <br> <a href="assets/file/HKUST/MSBD5017_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -245,8 +251,19 @@
                       </td>
                       <td>
                         Natural Language Processing
+                        <br> <a href="assets/file/HKUST/MSBD5018_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
+                    <tr>
+                      <td>
+                        MSBD6000
+                      </td>
+                      <td>
+                        Spatial and Multimedia Databases (#)
+                        <br> <a href="assets/file/HKUST/MSBD6000_report.pdf" target="_blank">Course Project Report</a>
+                      </td>
+                    </tr>
+                    <tr><td colspan="2"># : Interested</td></tr>
                   </table>
                 </div>
               </div>
@@ -284,7 +301,7 @@
                         CSCI2100
                       </td>
                       <td>
-                        Data Structures
+                        Data Structures (#)
                       </td>
                     </tr>
                     <tr>
@@ -292,7 +309,7 @@
                         CSCI3100
                       </td>
                       <td>
-                        Software Engineering
+                        Software Engineering (#)
                       </td>
                     </tr>
                     <tr>
@@ -308,7 +325,7 @@
                         CSCI3160
                       </td>
                       <td>
-                        Design and Analysis of Algorithms
+                        Design and Analysis of Algorithms (#)
                       </td>
                     </tr>
                     <tr>
@@ -316,7 +333,7 @@
                         CSCI3180
                       </td>
                       <td>
-                        Principles of Programming Languages
+                        Principles of Programming Languages (#)
                       </td>
                     </tr>
                   </table>
@@ -327,7 +344,7 @@
                         CSCI3150
                       </td>
                       <td>
-                        Introduction to Operating Systems
+                        Introduction to Operating Systems (#)
                       </td>
                     </tr>
                     <tr>
@@ -335,7 +352,7 @@
                         CENG3420
                       </td>
                       <td>
-                        Computer Organization and Design
+                        Computer Organization and Design (#)
                       </td>
                     </tr>
                   </table>
@@ -354,7 +371,7 @@
                         CSCI3280
                       </td>
                       <td>
-                        Introduction to Multimedia Systems
+                        Introduction to Multimedia Systems (#)
                       </td>
                     </tr>
                     <tr>
@@ -379,7 +396,7 @@
                         CSCI3290
                       </td>
                       <td>
-                        Computational Imaging and Vision
+                        Computational Imaging and Vision (#)
                       </td>
                     </tr>
                   </table>
@@ -398,7 +415,7 @@
                         CSCI4160
                       </td>
                       <td>
-                        Distributed and Parallel Computing
+                        Distributed and Parallel Computing (#)
                       </td>
                     </tr>
                     <tr>
@@ -417,7 +434,7 @@
                         IERG4230
                       </td>
                       <td>
-                        Introduction to Internet of Things
+                        Introduction to Internet of Things (#)
                       </td>
                     </tr>
                     <tr>
@@ -433,10 +450,11 @@
                         IERG4190
                       </td>
                       <td>
-                        Multimedia Coding and Processing
+                        Multimedia Coding and Processing (#)
                       </td>
                     </tr>
                   </table>
+                  # : Interested
                 </div>
               </div>
             </div>
@@ -508,12 +526,14 @@
             <div class="resume-item">
               <h4>Software Engineer</h4>
               <h5>Jul 2022 - Present</h5>
-              <p><em><a href="https://flyfarm.com/" target="_blank">Fly Farm</a>, Hong
+              <p><em><a href="https://flyfarm.com/" target="_blank">FLYFARM</a>, Hong
                   Kong</em></p>
               <ul>
-                <li>Developing a remote monitoring system for the IoT agri-tech company, using Restful API and Mongodb.</li>
+                <li>Developing a remote monitoring system for the IoT agri-tech company, using Restful API and Mongodb.
+                </li>
                 <li>Developing a real-time machinery and robotics control system using MQTT and Flutter.</li>
-                <li>Performing the potential needs for data analysis with Big Data Technology, not limited to AI, Data Lake.</li>
+                <li>Performing the potential needs for data analysis with Big Data Technology, not limited to AI, Data
+                  Lake.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -524,8 +544,10 @@
               <ul>
                 <li>Responsible for InnoHK pioneering research clusters robotics project.</li>
                 <li>Developed unmannered robot interaction system with human.</li>
-                <li>Developed front-end not limited to mobile and web application and back-end service service with gRPC API hosting on AWS and Alicloud.</li>
-                <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot project</a></li>
+                <li>Developed front-end not limited to mobile and web application and back-end service service with gRPC
+                  API hosting on AWS and Alicloud.</li>
+                <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot
+                    project</a></li>
               </ul>
             </div>
             <div class="resume-item">
@@ -761,12 +783,14 @@
                   <b>CUHK Robocon Team - Observer</b>
                   <b class="float-end date"> 2022
                   </b>
-                </b><br>
-                <em>Related news</em>
-                <ul>
-                  <li><a href="https://www.youtube.com/watch?v=GEz8ktGMHKE&t=35467s&ab_channel=ROBOCONOfficial%5Brobotcontest%5D" target="_blank">ABU Robocon 2022 Live</a>
-                  </li>
-                </ul>
+                  </b><br>
+                  <em>Related news</em>
+                  <ul>
+                    <li><a
+                        href="https://www.youtube.com/watch?v=GEz8ktGMHKE&t=35467s&ab_channel=ROBOCONOfficial%5Brobotcontest%5D"
+                        target="_blank">ABU Robocon 2022 Live</a>
+                    </li>
+                  </ul>
                 </li>
                 <li>
                   <b>VEX IQ held by CUHK - Judge</b>
