HKCLR details update

--- a/index.html
+++ b/index.html
@@ -263,7 +263,9 @@
                         <br> <a href="assets/file/HKUST/MSBD6000_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
-                    <tr><td colspan="2"># : Interested</td></tr>
+                    <tr>
+                      <td colspan="2"># : Interested</td>
+                    </tr>
                   </table>
                 </div>
               </div>
@@ -547,7 +549,10 @@
                 <li>Developed front-end not limited to mobile and web application and back-end service service with gRPC
                   API hosting on AWS and Alicloud.</li>
                 <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot
-                    project</a></li>
+                    project</a>, <a href="assets/file/HKCLR/Demo.pdf" target="_blank">ppt
+                  </a>, <a href="https://drive.google.com/file/d/1Qv_m4ATuxvK-VuG3VXtCS_FaArG8BWjy/view?usp=sharing"
+                    target="_blank">Demo Video
+                  </a></li>
               </ul>
             </div>
             <div class="resume-item">
