--- a/index.html
+++ b/index.html
@@ -610,12 +610,13 @@
             <tr>
               <th scope="row">Tools (SW related)</th>
               <td> Robotic and Embedded System (Arduino, Linux, Jetson Nano, ROS)<br>
+                IoT (MQTT)<br>
                 Computer Vision (OpenCV)<br>
                 API (gRPC, RESTFUL)<br>
                 Backend (Flask, Express, SQL, MongoDB)<br>
                 Mobile App Development (Flutter)<br>
                 Web Application (Bootstrap)<br>
-                Cloud Related (AWS, Azure, Spark, Hadoop)<br>
+                Cloud Related (AWS, Azure, GCP, Spark, Hadoop)<br>
                 Game Development (Unity, Unreal Engine)<br>
                 Machine Learning (Pytorch, TensorFlow)<br>
                 Parallel Computing (CUDA, SIMD)<br>
