--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                       </td>
                       <td>
                         Natural Language Processing
-                        <br> <a href="assets/file/HKUST/MSBD5018_report.pdf" target="_blank">Course Project Report</a>
+                        <br> <a href="assets/file/HKUST/MSBD5018_report.pdf" target="_blank">Course Project Report</a>, <a href="assets/file/HKUST/MSBD5018_Individual_Project.pdf" target="_blank">Personal Report</a>
                       </td>
                     </tr>
                     <tr>
