upload new assignments

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                       </td>
                       <td>
                         Data Mining and Knowledge Discovery (#)
-                        <br> <a href="assets/file/HKUST/MSBD5002_report.pdf" target="_blank">Course Project Report</a>
+                        <br> <a href="assets/file/HKUST/msbd5002.zip" target="_blank">Assignment</a>, <a href="assets/file/HKUST/MSBD5002_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -260,7 +260,7 @@
                       </td>
                       <td>
                         Spatial and Multimedia Databases (#)
-                        <br> <a href="assets/file/HKUST/MSBD6000_report.pdf" target="_blank">Course Project Report</a>
+                        <br> <a href="assets/file/HKUST/msbd6000-spatial-and-multimedia-databases.zip" target="_blank">Assignment</a>,  <a href="assets/file/HKUST/MSBD6000_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
