--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Lam Chun Ting Jeff</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Developer, Programmer, Engineer, Data Scientist"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Software Engineer, Programmer, System Engineer, Data Scientist"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -107,7 +107,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hong Kong</span></li>
                 </ul>
               </div>
