--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Lam Chun Ting Jeff</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Engineer, Programmer, System Engineer, Data Scientist"></span></p>
+      <p>I'm <span class="typed"
+          data-typed-items="Software Engineer, Programmer, System Engineer, Data Scientist"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -191,7 +192,8 @@
                       </td>
                       <td>
                         Data Mining and Knowledge Discovery (#)
-                        <br> <a href="assets/file/HKUST/msbd5002.zip" target="_blank">Assignment</a>, <a href="assets/file/HKUST/MSBD5002_report.pdf" target="_blank">Course Project Report</a>
+                        <br> <a href="assets/file/HKUST/msbd5002.zip" target="_blank">Assignment</a>, <a
+                          href="assets/file/HKUST/MSBD5002_report.pdf" target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -252,7 +254,8 @@
                       </td>
                       <td>
                         Natural Language Processing
-                        <br> <a href="assets/file/HKUST/MSBD5018_report.pdf" target="_blank">Course Project Report</a>, <a href="assets/file/HKUST/MSBD5018_Individual_Project.pdf" target="_blank">Personal Report</a>
+                        <br> <a href="assets/file/HKUST/MSBD5018_report.pdf" target="_blank">Course Project Report</a>,
+                        <a href="assets/file/HKUST/MSBD5018_Individual_Project.pdf" target="_blank">Personal Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -261,7 +264,9 @@
                       </td>
                       <td>
                         Spatial and Multimedia Databases (#)
-                        <br> <a href="assets/file/HKUST/msbd6000-spatial-and-multimedia-databases.zip" target="_blank">Assignment</a>,  <a href="assets/file/HKUST/MSBD6000_report.pdf" target="_blank">Course Project Report</a>
+                        <br> <a href="assets/file/HKUST/msbd6000-spatial-and-multimedia-databases.zip"
+                          target="_blank">Assignment</a>, <a href="assets/file/HKUST/MSBD6000_report.pdf"
+                          target="_blank">Course Project Report</a>
                       </td>
                     </tr>
                     <tr>
@@ -532,12 +537,20 @@
               <p><em><a href="https://flyfarm.com/" target="_blank">FLYFARM</a>, Hong
                   Kong</em></p>
               <ul>
-                <li>Developing a remote monitoring system for the IoT agri-tech company, using Restful API and Mongodb.
+                <li>Analyzed competitors and stack-holders needs for cost effective and user-friendly the software
+                  system.
                 </li>
-                <li>Developing a real-time machinery and robotics control system using MQTT and Flutter.</li>
-                <li>Performing the potential needs for data analysis with Big Data Technology, not limited to AI, Data
-                  Lake.</li>
+                <li>Developed and maintained a remote monitoring system for the IoT agri-tech company, using Python and
+                  NodeJS
+                  along with GCP, AWS, MongoDB Atlas technology</li>
+                <li>Collaborated with Mechatronic Team for building a real-time machinery and robotics control system
+                  through
+                  network protocol like MQTT, Restful, socket, and even wired communication such as RS485, I2C using C++
+                </li>
+                <li>Conducted unit testing and integration testing to ensure software quality and reliability.</li>
               </ul>
+              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->Google Cloud Platform (GCP) · Mqtt ·
+                MongoDB · Node.js · Amazon Web Services (AWS) · Python · Flutter · C++<!----></span>
             </div>
             <div class="resume-item">
               <h4>Assistant Engineer</h4>
@@ -546,15 +559,21 @@
                   Kong</em></p>
               <ul>
                 <li>Responsible for InnoHK pioneering research clusters robotics project.</li>
-                <li>Developed unmannered robot interaction system with human.</li>
-                <li>Developed front-end not limited to mobile and web application and back-end service service with gRPC
-                  API hosting on AWS and Alicloud.</li>
+                <li>Collaborated with PhD candidates, and researched in AI technology for an unmannered robot-human
+                  interaction
+                  system using ROS, pytorch, tensorflow, and OpenCV.</li>
+                <li>Developed and maintained full-stack application connecting robot to AWS and Alicloud through gRPC
+                  and REST</li>
+                <li>Implemented front-end application with web technologies HTML, CSS, JS and mobile Flutter.</li>
                 <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot
                     project</a>, <a href="assets/file/HKCLR/Demo.pdf" target="_blank">ppt
                   </a>, <a href="https://drive.google.com/file/d/1Qv_m4ATuxvK-VuG3VXtCS_FaArG8BWjy/view?usp=sharing"
                     target="_blank">Demo Video
                   </a></li>
               </ul>
+              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->OpenCV · TensorFlow · Robot Operating
+                System (ROS) · Amazon Web Services (AWS) · Alibaba Cloud · Python · Flutter · gRPC · SQL ·
+                C++<!----></span>
             </div>
             <div class="resume-item">
               <h4>Student Helper (Software Engineer)</h4>
